--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,4 @@
  *= require_self
  */
  @import "bootstrap/scss/bootstrap"; /* picks it up in node_modules! */
+ @import url("stylesheets/flats.css");
