--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -27,6 +27,15 @@
             <p><%= flat.address %></p>
           </div>
           <div class="flat-card-actions">
+                      <div class="flex">
+              <div class="flex">
+                <i class="material-icons mr-2">people</i><span><%= flat.number_of_guests %></span>
+              </div>
+              <div class="flex ml-3">
+                <i class="material-icons mr-2">euro_symbol</i> <%= flat.price_per_night %>
+                <i class="fas fa-user-friends"></i>
+              </div>
+            </div>
             <a href="#">Link</a>
           </div>
         </div>
